# ticket-manager

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml
BackEnd/: Dockerfile  db.sqlite3  pyproject.toml  pytest.ini
BackEnd/backend_tickets/: asgi.py  settings.py  urls.py  wsgi.py
BackEnd/gestor/: models.py
BackEnd/gestor/api/: serializers.py  urls.py  views.py
BackEnd/gestor/migrations/: 0001_initial.py
BackEnd/tests/: test_tickets_api.py
FrontEnd/: Dockerfile  nuxt.config.ts  package.json  pnpm-lock.yaml
FrontEnd/components/: TicketFilters.vue  TicketForm.vue  TicketList.vue
FrontEnd/composables/: useTickets.ts
FrontEnd/pages/: index.vue
FrontEnd/types/: BackendError.ts  Ticket.ts
FrontEnd/utils/: ticketLabels.ts
