[project]
name = "backend"
version = "0.1.0"
description = "API REST para gestión de tickets."
authors = [
    {name = "Manu"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "django",
    "djangorestframework"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-django = "*"
